syntax = "proto3";

option go_package = "v1";

import "api/v1/signal.proto";
import "google/protobuf/timestamp.proto";

package v1;

message ProcessIndicator {
    // A unique uuid for the Indicator message
    string id = 1;

    // The deployment ID associated with the signal
    string deployment_id = 2;

    // The emit timestamp of the message. Used for measuring latency
    google.protobuf.Timestamp emit_timestamp = 3;

    // A signal message passed from Collector to Sensor
    Signal signal = 4;
}
